# seminar-testing

./: .gitmodules  .travis.yml  CMakeLists.txt  CMakeListsFiles.cmake  LICENSE  README.md  init-submodules.sh
src/lib/: Stack.hpp  StdAfx.cpp  StdAfx.hpp
src/main/: StdAfxMain.cpp  StdAfxMain.hpp  main.cpp
src/test/: StdAfxTest.cpp  StdAfxTest.hpp  TestMain.cpp  TestStack.cpp
